# netbox-certificates

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
netbox_certificates/: __init__.py  models.py  navigation.py  plugin.py  search.py  urls.py
netbox_certificates/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
netbox_certificates/api/serializers_/: __init__.py  certificate.py  certificate_authority.py  certificate_instance.py
netbox_certificates/filtersets/: certificate.py  certificate_authority.py  certificate_instance.py
netbox_certificates/forms/: __init__.py  certificate.py  certificate_authority.py  certificate_instance.py
netbox_certificates/graphql/: __init__.py  filters.py  schema.py  types.py
netbox_certificates/migrations/: 0001_initial.py  0002_alter_certificate_automated_and_more.py  0003_certificateauthority_cert_profile_ev_id_and_more.py  0004_alter_certificate_term.py  0005_alter_certificate_term.py  0006_certificate_active_certificate_latest.py  0007_certificate_monitor.py  0008_alter_certificate_active_alter_certificate_latest.py  0009_certificateinstance_monitor.py  0010_rename_monitor_certificateinstance_surpassed.py  0011_certificate_host_consistent.py  0012_alter_certificate_host_consistent.py  0013_alter_certificate_host_consistent.py  0014_certificateauthority_cert_profile_wildcard_id.py
netbox_certificates/models/: __init__.py  ca.py  certificate.py  certificate_authority.py  certificate_instance.py
netbox_certificates/tables/: certificate.py  certificate_authority.py  certificate_instance.py
netbox_certificates/templates/netbox_certificates/: certificate.html  certificate_instance.html  certificateauthority.html  certificateinstance.html  certificates.ics
netbox_certificates/views/: certificate.py  certificate_authority.py  certificate_instance.py
