[project]
name = "netbox-certificates"
version = "0.0.2"
description = "NetBox certificatesis a NetBox plugin for managing certificates"
authors = [
    {name="Network Seb", email="netbox-certificates@cdal.co.uk"},
]
readme = "README.md"
keywords = ["netbox", "netbox-plugin", "certificates"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/networkseb/netbox-certificates"
Repository = "https://github.com/networkseb/netbox-certificates"
Issues = "https://github.com/networkseb/netbox-certificates/issues"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
exclude = ["examples*", "media*", "*.tests*"]

[tool.setuptools.package-data]
"netbox_certificates" = ["templates/**/*.html", "migrations/*.py"]